--- a/recipes/home-theatre.yml
+++ b/recipes/home-theatre.yml
@@ -19,6 +19,7 @@ modules:
   - from-file: features/dotfiles.yml
   - from-file: features/sshable.yml
   - from-file: features/no-suspend.yml
+  - from-file: features/trust-nextdns-ca.yml
   - from-file: features/trust-custom-ca.yml
 
   - from-file: components/kodi.yml
