--- a/recipes/bazzite-deck.yml
+++ b/recipes/bazzite-deck.yml
@@ -19,6 +19,6 @@ modules:
   - from-file: features/trust-custom-ca.yml
   - from-file: features/trust-nextdns-ca.yml
 
-  - from-file: flatpaks/integrated.yml
+  - from-file: flatpaks/firstparty.yml
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
