--- a/recipes/laptop.yml
+++ b/recipes/laptop.yml
@@ -19,10 +19,8 @@ modules:
   - from-file: tools/git-ssh.yml
 
   # Software
-  - from-file: flatpaks/integrated.yml
+  - from-file: flatpaks/firstparty.yml
   - from-file: flatpaks/thirdparty.yml
-  - from-file: flatpaks/work.yml
-  - from-file: flatpaks/office.yml
 
   # Features
   - from-file: features/sshable.yml
