build(push-bluebuild): don't abort all builds if one fails

--- a/.github/workflows/push-bluebuild.yml
+++ b/.github/workflows/push-bluebuild.yml
@@ -119,6 +119,8 @@ jobs:
     if: ${{ needs.changes.outputs.recipes != '[]' && needs.changes.outputs.recipes != '' }}
 
     strategy:
+      fail-fast: false
+
       matrix:
         recipe: ${{ fromJSON(needs.changes.outputs.recipes) }}
 
