feat(flatpaks): add kontrast, kasts, and kwalletmanager5 to firstparty flatpaks

--- a/recipes/flatpaks/firstparty.yml
+++ b/recipes/flatpaks/firstparty.yml
@@ -25,3 +25,6 @@ modules:
         - org.kde.elisa
         - org.kde.marble
         - org.kde.kontact
+        - org.kde.kontrast
+        - org.kde.kasts
+        - org.kde.kwalletmanager5
