fix(kodi-as-greeter): fix custom zone service schema

--- a/recipes/features/kodi-as-greeter.yml
+++ b/recipes/features/kodi-as-greeter.yml
@@ -22,8 +22,8 @@ modules:
         description: Kodi media center
         target: public
         services:
-          - kodi-eventserver
-          - kodi-http
-          - kodi-jsonrpc
+          - name: kodi-eventserver
+          - name: kodi-http
+          - name: kodi-jsonrpc
 
     default_zone: Kodi
