fix(firewall): remove random target element from the config

--- a/recipes/features/kodi-as-greeter.yml
+++ b/recipes/features/kodi-as-greeter.yml
@@ -20,8 +20,11 @@ modules:
     custom_zones:
       - name: Kodi
         description: Kodi media center
-        target: public
         services:
+          - name: ssh
+          - name: mdns
+          - name: samba-client
+          - name: dhcpv6-client
           - name: kodi-eventserver
           - name: kodi-http
           - name: kodi-jsonrpc
