--- a/recipes/home-theatre.yml
+++ b/recipes/home-theatre.yml
@@ -21,6 +21,7 @@ modules:
   - from-file: features/no-suspend.yml
   - from-file: features/trust-nextdns-ca.yml
   - from-file: features/trust-custom-ca.yml
+  - from-file: features/disable-coredumps.yml
 
   - from-file: components/kodi.yml
   - from-file: features/kodi-as-greeter.yml
