--- a/recipes/k8s-node.yml
+++ b/recipes/k8s-node.yml
@@ -20,6 +20,7 @@ modules:
   - from-file: features/no-suspend.yml
   - from-file: features/raised-ulimits.yml
   - from-file: features/auto-blank-terminal.yml
+  - from-file: features/disable-coredumps.yml
 
   - from-file: components/kubernetes.yml
 
