--- a/recipes/workstation.yml
+++ b/recipes/workstation.yml
@@ -27,5 +27,6 @@ modules:
   - from-file: features/libvirt-hooks.yml
   - from-file: features/trust-custom-ca.yml
   - from-file: features/trust-nextdns-ca.yml
+  - from-file: features/disable-coredumps.yml
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
