--- a/recipes/_aurora-nvidia.yml
+++ b/recipes/_aurora-nvidia.yml
@@ -1,25 +1,31 @@
 # image will be published to ghcr.io/<user>/<name>
-name: bazzite
+name: base-aurora-nvidia
 # description will be included in the image's metadata
-description: This is my personal OS image for dedicated gaming boxes.
+description: Aurora base image with Nvidia blobs
 
 # the base image to build on top of (FROM) and the version tag to use
-base-image: ghcr.io/ublue-os/bazzite
+base-image: ghcr.io/ublue-os/aurora-dx-nvidia
 image-version: 42 # latest is also supported if you want new updates ASAP
 
 # module configuration, executed in order
 # you can include multiple instances of the same module
 modules:
-  - from-file: cleanup/bazzite.yml
+  # Cleanup
+  - from-file: cleanup/aurora-dx.yml
 
+  # Tools
   - from-file: tools/general.yml
+  - from-file: tools/git-ssh.yml
 
-  - from-file: features/dotfiles.yml
+  # Software
+  - from-file: flatpaks/firstparty.yml
+  - from-file: flatpaks/thirdparty.yml
+
+  # Features
   - from-file: features/sshable.yml
+  - from-file: features/dotfiles.yml
   - from-file: features/trust-custom-ca.yml
   - from-file: features/trust-nextdns-ca.yml
   - from-file: features/disable-coredumps.yml
-
-  - from-file: flatpaks/firstparty.yml
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
