--- a/recipes/server.yml
+++ b/recipes/server.yml
@@ -4,24 +4,12 @@ name: server
 description: This is my personal OS image for one-off servers.
 
 # the base image to build on top of (FROM) and the version tag to use
-base-image: ghcr.io/ublue-os/ucore-minimal
-image-version: stable # latest is also supported if you want new updates ASAP
+base-image: ghcr.io/decentm/base-server
+image-version: latest
 
 # module configuration, executed in order
 # you can include multiple instances of the same module
 modules:
-  - from-file: cleanup/coreos.yml
-
-  - from-file: tools/general.yml
   - from-file: tools/git-ssh.yml
-
-  - from-file: features/disable-selinux.yml
-  - from-file: features/dotfiles.yml
-  - from-file: features/sshable.yml
-  - from-file: features/no-suspend.yml
-  - from-file: features/raised-ulimits.yml
-  - from-file: features/trust-custom-ca.yml
-  - from-file: features/auto-blank-terminal.yml
-  - from-file: features/disable-coredumps.yml
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
