feat: add qt6-qtwebsockets-devel for the home assistant plasma widget

--- a/recipes/_aurora-nvidia.yml
+++ b/recipes/_aurora-nvidia.yml
@@ -13,6 +13,9 @@ modules:
   # Cleanup
   - from-file: cleanup/aurora-dx.yml
 
+  # Components
+  - from-file: components/plasma-widget-requirements.yml
+
   # Tools
   - from-file: tools/general.yml
   - from-file: tools/git-ssh.yml
