--- a/.github/workflows/weekly-update.yml
+++ b/.github/workflows/weekly-update.yml
@@ -5,12 +5,20 @@ on:
     - cron: "00 06 * * TUE"
 
   workflow_dispatch:
+    inputs:
+      skip_base:
+        type: boolean
+        description: Skip base image builds
+        required: false
+        default: false
 
 jobs:
   base-bluebuild:
     name: Build Bases
 
     runs-on: ubuntu-latest
+
+    if: ${{ github.event.inputs.skip_base != 'true' }}
 
     strategy:
       fail-fast: false
@@ -83,8 +91,7 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    needs:
-      - base-bluebuild
+    if: always()
 
     strategy:
       fail-fast: false
