fix(bazzite): undo some dumb choices

--- a/recipes/cleanup/bazzite.yml
+++ b/recipes/cleanup/bazzite.yml
@@ -3,3 +3,14 @@ modules:
     remove:
       - nano
       - nano-default-editor
+      - bazaar
+      - krunner-bazaar
+      - gnome-disk-utility
+
+  - type: rpm-ostree
+    install:
+      - kde-partitionmanager
+      - plasma-discover
+      - plasma-discover-flatpak
+      - plasma-discover-notifier
+      - plasma-discover-offline-updates
