fix(bazzite): remove auto-added peer packages to discover

--- a/recipes/cleanup/bazzite.yml
+++ b/recipes/cleanup/bazzite.yml
@@ -13,3 +13,8 @@ modules:
       - plasma-discover
       - plasma-discover-flatpak
       - plasma-discover-notifier
+
+  - type: rpm-ostree
+    remove:
+      - plasma-discover-offline-updates
+      - plasma-discover-packagekit
