chore: pin default-flatpaks to v1 to keep flatpak removal an option for now

--- a/recipes/cleanup/aurora-dx.yml
+++ b/recipes/cleanup/aurora-dx.yml
@@ -15,7 +15,7 @@ modules:
       - nano
       - nano-default-editor
 
-  - type: default-flatpaks
+  - type: default-flatpaks@v1
     notify: false # Send notification after install/uninstall is finished (true/false)
     system:
       remove:
