--- a/recipes/flatpaks/thirdparty.yml
+++ b/recipes/flatpaks/thirdparty.yml
@@ -1,5 +1,5 @@
 modules:
-  - type: default-flatpaks
+  - type: default-flatpaks@v1
 
     notify: true # Send notification after install/uninstall is finished (true/false)
 
