--- a/recipes/_kinoite.yml
+++ b/recipes/_kinoite.yml
@@ -10,6 +10,8 @@ image-version: 42 # latest is also supported if you want new updates ASAP
 # module configuration, executed in order
 # you can include multiple instances of the same module
 modules:
+  - from-file: cleanup/kinoite.yml
+
   # Tools
   - from-file: tools/general.yml
   - from-file: tools/git-ssh.yml
