--- a/recipes/_aurora.yml
+++ b/recipes/_aurora.yml
@@ -14,8 +14,8 @@ modules:
   - from-file: cleanup/aurora-dx.yml
 
   # Tools
-  - from-file: tools/general.yml
-  - from-file: tools/git-ssh.yml
+  - from-file: components/general-tools.yml
+  - from-file: components/sshpass.yml
 
   # Software
   - from-file: flatpaks/firstparty.yml
@@ -27,5 +27,6 @@ modules:
   - from-file: features/trust-custom-ca.yml
   - from-file: features/trust-nextdns-ca.yml
   - from-file: features/disable-coredumps.yml
+  - from-file: features/libvirt-hooks.yml
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
