--- a/recipes/components/nerd-fonts.yml
+++ b/recipes/components/nerd-fonts.yml
@@ -4,3 +4,12 @@ modules:
       - cascadia-code-nf-fonts
       - powerline-fonts
       - adobe-source-code-pro-fonts
+      - mozilla-fira-mono-fonts
+      - intel-one-mono-fonts
+      - google-droid-sans-mono-fonts
+      - google-go-mono-fonts
+      - ibm-plex-mono-fonts
+      - nerdfontssymbolsonly-nerd-fonts
+      - jetbrains-mono-fonts-all
+      - firacode-nerd-fonts
+      - rsms-inter-fonts
