--- a/recipes/server.yml
+++ b/recipes/server.yml
@@ -10,6 +10,6 @@ image-version: latest
 # module configuration, executed in order
 # you can include multiple instances of the same module
 modules:
-  - from-file: components/sshpass.yml
+  - from-file: packages/sshpass.yml
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
