--- a/recipes/home-theatre.yml
+++ b/recipes/home-theatre.yml
@@ -10,7 +10,7 @@ image-version: latest
 # module configuration, executed in order
 # you can include multiple instances of the same module
 modules:
-  - from-file: components/kodi.yml
+  - from-file: packages/kodi.yml
   - from-file: features/kodi-as-greeter.yml
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
