--- a/recipes/k8s-node.yml
+++ b/recipes/k8s-node.yml
@@ -10,6 +10,6 @@ image-version: latest
 # module configuration, executed in order
 # you can include multiple instances of the same module
 modules:
-  - from-file: components/kubernetes.yml
+  - from-file: packages/kubernetes.yml
 
   - type: signing
