--- a/recipes/workstation-kinoite.yml
+++ b/recipes/workstation-kinoite.yml
@@ -10,4 +10,6 @@ image-version: latest
 # module configuration, executed in order
 # you can include multiple instances of the same module
 modules:
+  - from-file: components/winapps.yml
+
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
